[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.1"
license = "MIT"
description = "self-learning"
homepage = "thomas.lerr.dev"
repository = "https://github.com/thomas-lerr/rust-web-app"

[dependencies]
tokio = {version = "1", features = ["full"]}

# -- Json
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "3"

# -- Web
axum = { version = "0.6" , features = ["macros"]}
tower-http = {version = "0.4", features = ["fs"]}
tower-cookies = "0.9"

# -- Tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

# -- Others
uuid = {version = "1", features = ["v4", "fast-rng"]}
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1" # use request & cookie store.

[env]
RUST_LOG="rust_web_app=debug"